Add screens, Add JSON file of apps & Add apps names to portfolio

--- a/index.html
+++ b/index.html
@@ -41,91 +41,143 @@
 				<div class="mdl-grid portfolio-max-width">
 					<div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
 						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">App Title</h2>
+							<h2 class="mdl-card__title-text">Movie Db Popular People</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
+							Displaying a list of popular people (actors, directors ..etc) from the movie db site API.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName1">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=tmdbpp">
 								View Details
 							</a>
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
 						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">App Title</h2>
+							<h2 class="mdl-card__title-text">Student Portal</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
+							Student portal for universities working with "Ibn Al-Haitham" student information system.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName2">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=studentPortal">
 								View Details
 							</a>
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
 						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">App Title</h2>
+							<h2 class="mdl-card__title-text">Ibn Sina Patient Reservation</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
+							Patient reservation system based on "Ibn Sina" hospitals system.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName3">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=patientReservation">
 								View Details
 							</a>
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
 						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">App Title</h2>
+							<h2 class="mdl-card__title-text">FT App</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
+							Displaying a list of request with voice and images.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName4">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=ftapp">
 								View Details
 							</a>
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
 						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">App Title</h2>
+							<h2 class="mdl-card__title-text">Ibn Al-Haitham Academic</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
+							Ibn Al-Haitham student information system for academic year.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName5">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=ibnalhaithamAcademic">
 								View Details
 							</a>
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
 						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">App Title</h2>
+							<h2 class="mdl-card__title-text">Ibn Al-Haitham Post Graduate</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
+							Ibn Al-Haitham for post graduate students.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName6">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=ibnalhaithamPost">
 								View Details
 							</a>
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
 						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">App Title</h2>
+							<h2 class="mdl-card__title-text">Mansoura University News</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
+							Mansoura University news feed.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName7">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=munews">
+								View Details
+							</a>
+						</div>
+					</div>
+					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
+							<h2 class="mdl-card__title-text">Ibn Al-Haitham Credit</h2>
+						</div>
+						<div class="mdl-card__supporting-text">
+							Ibn Al-Haitham student information system for credit hours.
+						</div>
+						<div class="mdl-card__actions mdl-card--border">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=ibnalhaithamCredit">
+								View Details
+							</a>
+						</div>
+					</div>
+					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
+							<h2 class="mdl-card__title-text">Future Library</h2>
+						</div>
+						<div class="mdl-card__supporting-text">
+							Future library system.
+						</div>
+						<div class="mdl-card__actions mdl-card--border">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=future">
+								View Details
+							</a>
+						</div>
+					</div>
+					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
+							<h2 class="mdl-card__title-text">Where did I Park</h2>
+						</div>
+						<div class="mdl-card__supporting-text">
+							Save the place you parked your car at.
+						</div>
+						<div class="mdl-card__actions mdl-card--border">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=wdip">
+								View Details
+							</a>
+						</div>
+					</div>
+					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
+							<h2 class="mdl-card__title-text">YTS.AG</h2>
+						</div>
+						<div class="mdl-card__supporting-text">
+							Display list of latest movies.
+						</div>
+						<div class="mdl-card__actions mdl-card--border">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=yts">
 								View Details
 							</a>
 						</div>
