Add icons to main screesn

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 			<main class="mdl-layout__content">
 				<div class="mdl-grid portfolio-max-width">
 					<div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">Movie Db Popular People</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/tmbd.svg);">
+							<h2 class="mdl-card__title-text app-title">Movie Db Popular People</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Displaying a list of popular people (actors, directors ..etc) from the movie db site API.
@@ -53,8 +53,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">Student Portal</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/student-portal.png);">
+							<h2 class="mdl-card__title-text app-title">Student Portal</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Student portal for universities working with "Ibn Al-Haitham" student information system.
@@ -66,8 +66,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">Ibn Sina Patient Reservation</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/ibn-sina-reservation.png);">
+							<h2 class="mdl-card__title-text app-title">Ibn Sina Patient Reservation</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Patient reservation system based on "Ibn Sina" hospitals system.
@@ -79,8 +79,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">FT App</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/ft-app.png);">
+							<h2 class="mdl-card__title-text app-title">FT App</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Displaying a list of request with voice and images.
@@ -92,8 +92,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">Ibn Al-Haitham Academic</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/ibn-alhaitham-academic.png);">
+							<h2 class="mdl-card__title-text app-title">Ibn Al-Haitham Academic</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Ibn Al-Haitham student information system for academic year.
@@ -105,8 +105,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">Ibn Al-Haitham Post Graduate</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/ibn-alhaitham-post.png);">
+							<h2 class="mdl-card__title-text app-title">Ibn Al-Haitham Post Graduate</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Ibn Al-Haitham for post graduate students.
@@ -118,8 +118,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">Mansoura University News</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/mu-news.png);">
+							<h2 class="mdl-card__title-text app-title">Mansoura University News</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Mansoura University news feed.
@@ -131,8 +131,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">Ibn Al-Haitham Credit</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/student-portal.png);">
+							<h2 class="mdl-card__title-text app-title">Ibn Al-Haitham Credit</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Ibn Al-Haitham student information system for credit hours.
@@ -144,8 +144,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">Future Library</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/fl.png);">
+							<h2 class="mdl-card__title-text app-title">Future Library</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Future library system.
@@ -157,8 +157,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">Where did I Park</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/wdip.png);">
+							<h2 class="mdl-card__title-text app-title">Where did I Park</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Save the place you parked your car at.
@@ -170,8 +170,8 @@
 						</div>
 					</div>
 					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white">
-							<h2 class="mdl-card__title-text">YTS.AG</h2>
+						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/yts.svg);">
+							<h2 class="mdl-card__title-text app-title">YTS.AG</h2>
 						</div>
 						<div class="mdl-card__supporting-text">
 							Display list of latest movies.
