--- a/details.html
+++ b/details.html
@@ -44,6 +44,7 @@
 			</main>
 		</div>
 		<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/details.js"></script>
 	</body>
 </html>
