--- a/details.html
+++ b/details.html
@@ -39,7 +39,25 @@
 			</div>
 			<main class="mdl-layout__content">
 				<div class="mdl-grid portfolio-max-width">
-					
+					<div id="container" class="mdl-grid mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp no-padding">
+						<div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet">
+							<img id="icon" class="details-icon">
+						</div>
+						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet">
+							<h2 id="title" class="mdl-card__title-text"></h2>
+							<div id="download">
+								<a id="android" class="icon material-icons round-btn-details left-sidebar-image-bg">
+									android
+								</a>
+								<a id="ios" class="icon material-icons round-btn-details left-sidebar-image-bg">
+									<img src="img/apple-white.svg">
+								</a>
+							</div>
+							<p id="lang"></p>
+							<a id="source" class="source-code">Source code</a>
+						</div>
+						<div id="details" class="mdl-cell mdl-cell--12-col"></div>
+					</div>
 				</div>
 			</main>
 		</div>
