Open apps links in new tab

--- a/details.html
+++ b/details.html
@@ -46,15 +46,15 @@
 						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet">
 							<h2 id="title" class="mdl-card__title-text"></h2>
 							<div id="download">
-								<a id="android" class="icon material-icons round-btn-details left-sidebar-image-bg">
+								<a id="android" target="_blank" class="icon material-icons round-btn-details left-sidebar-image-bg">
 									android
 								</a>
-								<a id="ios" class="icon material-icons round-btn-details left-sidebar-image-bg">
+								<a id="ios" target="_blank" class="icon material-icons round-btn-details left-sidebar-image-bg">
 									<img src="img/apple-white.svg">
 								</a>
 							</div>
 							<p id="lang"></p>
-							<a id="source" class="source-code">Source code</a>
+							<a id="source" target="_blank" class="source-code">Source code</a>
 						</div>
 						<div id="details" class="mdl-cell mdl-cell--12-col"></div>
 					</div>
