Load apps dynamicly

--- a/index.html
+++ b/index.html
@@ -38,153 +38,11 @@
 				</nav>
 			</div>
 			<main class="mdl-layout__content">
-				<div class="mdl-grid portfolio-max-width">
-					<div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/tmbd.svg);">
-							<h2 class="mdl-card__title-text app-title">Movie Db Popular People</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Displaying a list of popular people (actors, directors ..etc) from the movie db site API.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=tmdbpp">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/student-portal.png);">
-							<h2 class="mdl-card__title-text app-title">Student Portal</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Student portal for universities working with "Ibn Al-Haitham" student information system.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=studentPortal">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/ibn-sina-reservation.png);">
-							<h2 class="mdl-card__title-text app-title">Ibn Sina Patient Reservation</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Patient reservation system based on "Ibn Sina" hospitals system.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=patientReservation">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/ft-app.png);">
-							<h2 class="mdl-card__title-text app-title">FT App</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Displaying a list of request with voice and images.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=ftapp">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/ibn-alhaitham-academic.png);">
-							<h2 class="mdl-card__title-text app-title">Ibn Al-Haitham Academic</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Ibn Al-Haitham student information system for academic year.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=ibnalhaithamAcademic">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/ibn-alhaitham-post.png);">
-							<h2 class="mdl-card__title-text app-title">Ibn Al-Haitham Post Graduate</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Ibn Al-Haitham for post graduate students.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=ibnalhaithamPost">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/mu-news.png);">
-							<h2 class="mdl-card__title-text app-title">Mansoura University News</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Mansoura University news feed.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=munews">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/student-portal.png);">
-							<h2 class="mdl-card__title-text app-title">Ibn Al-Haitham Credit</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Ibn Al-Haitham student information system for credit hours.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=ibnalhaithamCredit">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/fl.png);">
-							<h2 class="mdl-card__title-text app-title">Future Library</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Future library system.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=future">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/wdip.png);">
-							<h2 class="mdl-card__title-text app-title">Where did I Park</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Save the place you parked your car at.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=wdip">
-								View Details
-							</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title mdl-card--expand portfolio-blog-card-strip-bg mdl-color-text--white" style="background-image: url(img/icons/yts.svg);">
-							<h2 class="mdl-card__title-text app-title">YTS.AG</h2>
-						</div>
-						<div class="mdl-card__supporting-text">
-							Display list of latest movies.
-						</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=yts">
-								View Details
-							</a>
-						</div>
-					</div>
-				</div>
+				<div id="container" class="mdl-grid portfolio-max-width"></div>
 			</main>
 		</div>
 		<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/index.js"></script>
 	</body>
 </html>
