Add version control

--- a/resume.html
+++ b/resume.html
@@ -156,6 +156,15 @@
 											</div>
 										</div>
 									</div>
+									<div class="contact-item">
+										<div class="icon material-icons round-btn-left-small"><img src="img/git.svg"></div>
+										<div class="mdl-color-text--white left-data-text">
+											Version Control (Git, Github, Bitbucket)
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 85%;"></div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
