Edit resume and portofolio

--- a/resume.html
+++ b/resume.html
@@ -52,12 +52,12 @@
 								</div>
 								<div class="left-data">
 									<span class="mdl-color-text--white">
-										I'm a senior Software Engireenr with 4+ years of experience working on mobile applications Android, cross platform (Cordova) and iOS.
+										I'm a senior Software Engireenr with 5+ years of experience working on mobile applications Android, cross platform (Cordova) and iOS.
 									</span>
 									<br>
 									<br>
 									<span class="mdl-color-text--white">
-										Over the last 4 years, I have developed many native Android, iOS and cross platform applications using Java, XML, MySQL, JSON, HTML 5, CSS, JavaScript, Cordova and Swift. Besides, I have experience in Web and developed some web services. As well as writing automation tests using Appium.
+										Over the last 5 years, I have developed many native Android, iOS and cross platform applications using Java, XML, MySQL, JSON, HTML 5, CSS, JavaScript, Cordova and Swift. Besides, I have experience in Web and developed some web services. As well as writing automation tests using Appium.
 									</span>
 								</div>
 								<div class="left-title-div-big">
@@ -169,6 +169,22 @@
 								<div class="right-title-big">Work Experince</div>
 							</div>
 							<div class="right-content">
+								<div class="right-title-small">Senior Android Application Developer</div>
+								<div class="mdl-grid no-padding">
+									<div class="mdl-cell mdl-cell--5-col">
+										<div class="icon material-icons place right-place-icons">domain</div>
+										<div class="place right-place-text">Roqay Mansoura</div>
+									</div>
+									<div class="mdl-cell mdl-cell--7-col">
+										<div class="icon material-icons place right-place-icons">date_range</div>
+										<div class="place right-place-text">10 Sep 2018 - Current</div>
+									</div>
+								</div>
+								<div class="right-details">
+									<p>
+										Developing native Android applications using Java, Kotlin, XML and Android Studio.
+									</p>
+								</div>
 								<div class="right-title-small">Senior Mobile Software Developer</div>
 								<div class="mdl-grid no-padding">
 									<div class="mdl-cell mdl-cell--5-col">
@@ -177,7 +193,7 @@
 									</div>
 									<div class="mdl-cell mdl-cell--7-col">
 										<div class="icon material-icons place right-place-icons">date_range</div>
-										<div class="place right-place-text">1 Mar 2016-Current</div>
+										<div class="place right-place-text">1 Mar 2016 - 6 Sep 2018</div>
 									</div>
 								</div>
 								<div class="right-details">
@@ -199,7 +215,7 @@
 									</div>
 									<div class="mdl-cell mdl-cell--7-col">
 										<div class="icon material-icons place right-place-icons">date_range</div>
-										<div class="place right-place-text">1 Nov 2015-Current</div>
+										<div class="place right-place-text">1 Nov 2015 - 6 Sep 2018</div>
 									</div>
 								</div>
 								<div class="right-details">
@@ -221,7 +237,7 @@
 									</div>
 									<div class="mdl-cell mdl-cell--7-col">
 										<div class="icon material-icons place right-place-icons">date_range</div>
-										<div class="place right-place-text">1 May 2014-30 Oct 2015</div>
+										<div class="place right-place-text">1 May 2014 - 30 Oct 2015</div>
 									</div>
 								</div>
 								<div class="right-details">
@@ -232,7 +248,7 @@
 										Developing Node.js web applications.
 									</p>
 								</div>
-								<div class="right-title-small">Android Apllication Developer</div>
+								<div class="right-title-small">Android Application Developer</div>
 								<div class="mdl-grid no-padding">
 									<div class="mdl-cell mdl-cell--5-col">
 										<div class="icon material-icons place right-place-icons">domain</div>
@@ -240,7 +256,7 @@
 									</div>
 									<div class="mdl-cell mdl-cell--7-col">
 										<div class="icon material-icons place right-place-icons">date_range</div>
-										<div class="place right-place-text">1 Oct 2013-30 Apr 2014</div>
+										<div class="place right-place-text">1 Oct 2013 - 30 Apr 2014</div>
 									</div>
 								</div>
 								<div class="right-details">
@@ -262,7 +278,7 @@
 									</div>
 									<div class="mdl-cell mdl-cell--7-col">
 										<div class="icon material-icons place right-place-icons">date_range</div>
-										<div class="place right-place-text">20 Sep 2008-30 Jun 2013</div>
+										<div class="place right-place-text">20 Sep 2008 - 30 Jun 2013</div>
 									</div>
 								</div>
 								<div class="right-details">
