Edit .gitignore & Fix warning in project

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +46,7 @@
 						<div class="mdl-grid portfolio-copy">
 							<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
 								<p>
-									I'm a senior Software Engireenr with 5+ years of experience working on mobile applications Android, cross platform (Cordova) and iOS.
+									I'm a senior Software Engineer with 5+ years of experience working on mobile applications Android, cross platform (Cordova) and iOS.
 								</p>
 								<p>
 									Over the last 5 years, I have developed many native Android, iOS and cross platform applications using Java, XML, MySQL, JSON, HTML 5, CSS, JavaScript, Cordova and Swift. Besides, I have experience in Web and developed some web services. As well as writing automation tests using Appium.
