--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -63,7 +63,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small icon-contact"><img src="img/github.svg"></div>
+										<div class=" icon material-icons round-btn-left-small icon-contact"><img src="img/github.svg" alt="Github"></div>
 										<div class="left-data-text text-contact">
 											<a href="https://github.com/EslamElMeniawy" target="_blank">
 												EslamElMeniawy
@@ -71,7 +71,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small icon-contact"><img src="img/linkedin.svg"></div>
+										<div class=" icon material-icons round-btn-left-small icon-contact"><img src="img/linkedin.svg" alt="Linkedin"></div>
 										<div class="left-data-text text-contact">
 											<a href="https://linkedin.com/in/eslamelmeniawy" target="_blank">
 												eslamelmeniawy
