--- a/details.html
+++ b/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,7 +41,7 @@
 				<div class="mdl-grid portfolio-max-width">
 					<div id="container" class="mdl-grid mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp no-padding">
 						<div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet">
-							<img id="icon" class="details-icon">
+							<img id="icon" class="details-icon" alt="Details" src="">
 						</div>
 						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet">
 							<h2 id="title" class="mdl-card__title-text"></h2>
@@ -50,7 +50,7 @@
 									android
 								</a>
 								<a id="ios" target="_blank" class="icon material-icons round-btn-details left-sidebar-image-bg">
-									<img src="img/apple-white.svg">
+									<img src="img/apple-white.svg" alt="iOS">
 								</a>
 							</div>
 							<p id="lang"></p>
