--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,7 +89,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class="icon material-icons round-btn-left-small"><img src="img/cordova.png"></div>
+										<div class="icon material-icons round-btn-left-small"><img src="img/cordova.png" alt="Cordova"></div>
 										<div class="mdl-color-text--white left-data-text">
 											Cross Development (Cordova)
 											<div class="progress progress-outer">
@@ -98,7 +98,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class="icon material-icons round-btn-left-small"><img src="img/apple.svg"></div>
+										<div class="icon material-icons round-btn-left-small"><img src="img/apple.svg" alt="iOS"></div>
 										<div class="mdl-color-text--white left-data-text">
 											iOS Development (Swift)
 											<div class="progress progress-outer">
@@ -152,7 +152,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class="icon material-icons round-btn-left-small"><img src="img/git.svg"></div>
+										<div class="icon material-icons round-btn-left-small"><img src="img/git.svg" alt="Git"></div>
 										<div class="mdl-color-text--white left-data-text">
 											Version Control (Git, Github, Bitbucket)
 											<div class="progress progress-outer">
@@ -166,7 +166,7 @@
 						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet right-side">
 							<div class="right-title-big-container">
 								<div class="icon material-icons mdl-color-text--white round-btn-right">work</div>
-								<div class="right-title-big">Work Experince</div>
+								<div class="right-title-big">Work Experience</div>
 							</div>
 							<div class="right-content">
 								<div class="right-title-small">Senior Android Application Developer</div>
@@ -207,7 +207,7 @@
 										Writing automation tests for mobile applications using Appium.
 									</p>
 								</div>
-								<div class="right-title-small">Mobile Apllication Developer</div>
+								<div class="right-title-small">Mobile Application Developer</div>
 								<div class="mdl-grid no-padding">
 									<div class="mdl-cell mdl-cell--5-col">
 										<div class="icon material-icons place right-place-icons">domain</div>
@@ -229,7 +229,7 @@
 										Developing cross platform mobile applications using Cordova, HTML, CSS and JavaScript.
 									</p>
 								</div>
-								<div class="right-title-small">Mobile Apllication Developer</div>
+								<div class="right-title-small">Mobile Application Developer</div>
 								<div class="mdl-grid no-padding">
 									<div class="mdl-cell mdl-cell--5-col">
 										<div class="icon material-icons place right-place-icons">domain</div>
@@ -274,7 +274,7 @@
 								<div class="mdl-grid no-padding">
 									<div class="mdl-cell mdl-cell--5-col">
 										<div class="icon material-icons place right-place-icons">account_balance</div>
-										<div class="place right-place-text">Mansours University</div>
+										<div class="place right-place-text">Mansoura University</div>
 									</div>
 									<div class="mdl-cell mdl-cell--7-col">
 										<div class="icon material-icons place right-place-icons">date_range</div>
